Commit : shop page hidden from everywhere : book page links lowercased : book page text to edge fix : gap matched for top buttons

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -374,7 +374,7 @@ footer a.e_mail, a.e_mail {
 /* page top buttons */
 .buttons-ver-hor {
     display: flex;
-    gap: 12pt;
+    gap: 3pt;
     justify-content: center;
 }
 .buttons-ver-hor:first-child a {
